Remove hard coding Artisan RPL